Add scripts in HTML

--- a/Web-Development/jQuery/Project-Move/index.html
+++ b/Web-Development/jQuery/Project-Move/index.html
@@ -3,6 +3,9 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://s3.amazonaws.com/codecademy-content/projects/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
 <div class="main">
