Replace start button with Form

--- a/Web-Development/jQuery/Project-Move/index.html
+++ b/Web-Development/jQuery/Project-Move/index.html
@@ -12,7 +12,11 @@
     <div class="container">
         <h1>Move</h1>
         <p>Form healthy habits to take your fitness to the next level.</p>
-        <a class="btn" href="#">Start Now</a>
+        <form class="form-inline">
+            <div class="form-group">
+                <input type="text" class="form-control" id="start" placeholder="Find Your City">
+            </div>
+        </form>
     </div>
 </div>
 
