--- a/Web-Development/jQuery/Project-SpeakEasy/index.html
+++ b/Web-Development/jQuery/Project-SpeakEasy/index.html
@@ -58,6 +58,7 @@
 </div>
 
 <script src="https://s3.amazonaws.com/codecademy-content/projects/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/1.4.0/annyang.min.js"></script>
 <script src='script.js'></script>
 </body>
 </html>
